--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.5.3",
+    "install": "^0.13.0",
     "material-table": "1.36",
+    "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
