--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
