--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.5.3",
     "install": "^0.13.0",
     "material-table": "1.36",
+    "material-ui": "^0.20.2",
     "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
